@@ -12,7 +12,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <cuke4duke.version>0.4.3</cuke4duke.version>
+    <cuke4duke.version>0.4.4</cuke4duke.version>
   </properties>
 
   <build>
@@ -96,43 +96,46 @@
         <groupId>com.stuartsierra</groupId>
         <artifactId>lazytest-maven-plugin</artifactId>
         <version>1.0.1-SNAPSHOT</version>
+        <!-- <executions> -->
+        <!--   <execution> -->
+        <!--     <id>lazytest-run</id> -->
+        <!--     <phase>test</phase> -->
+        <!--     <goals> -->
+        <!--       <goal>run</goal> -->
+        <!--     </goals> -->
+        <!--   </execution> -->
+        <!-- </executions> -->
+      </plugin>
+      <plugin>
+        <groupId>cuke4duke</groupId>
+        <artifactId>cuke4duke-maven-plugin</artifactId>
+        <version>${cuke4duke.version}</version>
+        <configuration>
+          <jvmArgs>
+            <jvmArg>
+              -Dcuke4duke.objectFactory=cuke4duke.internal.jvmclass.PicoFactory
+            </jvmArg>
+            <jvmArg>
+              -XX:MaxPermSize=128m
+            </jvmArg>
+          </jvmArgs>
+          <cucumberArgs>
+            <cucumberArg>${project.basedir}/target/test-classes</cucumberArg>
+          </cucumberArgs>
+          <gems>
+            <gem>install cuke4duke --version ${cuke4duke.version}</gem>
+          </gems>
+        </configuration>
         <executions>
           <execution>
-            <id>lazytest-run</id>
-            <phase>test</phase>
+            <id>run-features</id>
+            <phase>integration-test</phase>
             <goals>
-              <goal>run</goal>
+              <goal>cucumber</goal>
             </goals>
           </execution>
         </executions>
       </plugin>
-      <!-- <plugin> -->
-      <!--   <groupId>cuke4duke</groupId> -->
-      <!--   <artifactId>cuke4duke-maven-plugin</artifactId> -->
-      <!--   <version>${cuke4duke.version}</version> -->
-      <!--   <configuration> -->
-      <!--     <jvmArgs> -->
-      <!--       <jvmArg> -->
-      <!--         -Dcuke4duke.objectFactory=cuke4duke.internal.jvmclass.PicoFactory -->
-      <!--       </jvmArg> -->
-      <!--     </jvmArgs> -->
-      <!--     <cucumberArgs> -->
-      <!--       <cucumberArg>${project.basedir}/target/test-classes</cucumberArg> -->
-      <!--     </cucumberArgs> -->
-      <!--     <gems> -->
-      <!--       <gem>install cuke4duke - -version ${cuke4duke.version}</gem> -->
-      <!--     </gems> -->
-      <!--   </configuration> -->
-      <!--   <executions> -->
-      <!--     <execution> -->
-      <!--       <id>run-features</id> -->
-      <!--       <phase>integration-test</phase> -->
-      <!--       <goals> -->
-      <!--         <goal>cucumber</goal> -->
-      <!--       </goals> -->
-      <!--     </execution> -->
-      <!--   </executions> -->
-      <!-- </plugin> -->
     </plugins>
  </build>
 
@@ -181,6 +184,11 @@
       <groupId>net.kronkltd</groupId>
       <artifactId>karras</artifactId>
       <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>clj-webdriver</groupId>
+      <artifactId>clj-webdriver</artifactId>
+      <version>0.2.7</version>
     </dependency>
     <!-- <dependency> -->
     <!--   <groupId>flutter</groupId> -->
